Etapa3/y.output
Terminals unused in grammar

   KW_FOR
   TOKEN_ERROR


State 53 conflicts: 1 reduce/reduce
State 54 conflicts: 1 reduce/reduce
State 166 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decList

    2 decList: dec decList
    3        | %empty

    4 dec: globalVariableDec
    5    | functionDec

    6 globalVariableDec: TK_IDENTIFIER ':' variableInfo ';'

    7 variableInfo: KW_BYTE '=' LIT_CHAR
    8             | KW_BYTE '=' LIT_INTEGER
    9             | KW_SHORT '=' LIT_INTEGER
   10             | KW_LONG '=' LIT_INTEGER
   11             | KW_FLOAT '=' LIT_REAL
   12             | KW_FLOAT '=' LIT_INTEGER
   13             | KW_DOUBLE '=' LIT_REAL
   14             | KW_DOUBLE '=' LIT_INTEGER
   15             | KW_SHORT '[' LIT_INTEGER ']' intList
   16             | KW_LONG '[' LIT_INTEGER ']' intList
   17             | KW_FLOAT '[' LIT_INTEGER ']' intList
   18             | KW_DOUBLE '[' LIT_INTEGER ']' intList
   19             | KW_FLOAT '[' LIT_INTEGER ']' realList
   20             | KW_DOUBLE '[' LIT_INTEGER ']' realList
   21             | KW_BYTE '[' LIT_INTEGER ']' intList

   22 intList: LIT_INTEGER intList
   23        | %empty

   24 realList: LIT_REAL realList
   25         | %empty

   26 functionDec: '(' type ')' TK_IDENTIFIER '(' parameterList ')' comandBlock

   27 parameterList: parameter moreParameters
   28              | %empty

   29 moreParameters: ',' parameter moreParameters
   30               | %empty

   31 parameter: TK_IDENTIFIER ':' type

   32 comand: comandBlock
   33       | fluxControl
   34       | attribution
   35       | read
   36       | return
   37       | print

   38 comandBlock: '{' comand moreComands '}'
   39            | %empty

   40 moreComands: ';' comand moreComands
   41            | %empty

   42 read: KW_READ '>' TK_IDENTIFIER

   43 print: KW_PRINT listElem

   44 listElem: LIT_STRING tail_listElem
   45         | expression tail_listElem

   46 tail_listElem: ',' LIT_STRING tail_listElem
   47              | ',' expression tail_listElem
   48              | %empty

   49 return: KW_RETURN expression

   50 fluxControl: KW_IF '(' expression ')' KW_THEN comand
   51            | KW_IF '(' expression ')' KW_THEN comand KW_ELSE comand
   52            | KW_WHILE '(' expression ')' comand

   53 expression: '(' expression ')'
   54           | expression '+' expression
   55           | expression '-' expression
   56           | expression '*' expression
   57           | expression '/' expression
   58           | expression '>' expression
   59           | expression '<' expression
   60           | expression OPERATOR_LE expression
   61           | expression OPERATOR_GE expression
   62           | expression OPERATOR_EQ expression
   63           | expression OPERATOR_NE expression
   64           | expression OPERATOR_AND expression
   65           | expression OPERATOR_OR expression
   66           | TK_IDENTIFIER
   67           | TK_IDENTIFIER '[' expression ']'
   68           | LIT_INTEGER
   69           | LIT_REAL
   70           | LIT_CHAR
   71           | callFunc
   72           | '!' expression

   73 attribution: TK_IDENTIFIER '=' expression
   74            | TK_IDENTIFIER '[' expression ']' '=' expression

   75 type: KW_BYTE
   76     | KW_SHORT
   77     | KW_LONG
   78     | KW_FLOAT
   79     | KW_DOUBLE

   80 callFunc: TK_IDENTIFIER '(' listArg ')'

   81 listArg: expression tailArg
   82        | %empty

   83 tailArg: ',' expression tailArg
   84        | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 72
'(' (40) 26 50 51 52 53 80
')' (41) 26 50 51 52 53 80
'*' (42) 56
'+' (43) 54
',' (44) 29 46 47 83
'-' (45) 55
'/' (47) 57
':' (58) 6 31
';' (59) 6 40
'<' (60) 59
'=' (61) 7 8 9 10 11 12 13 14 73 74
'>' (62) 42 58
'[' (91) 15 16 17 18 19 20 21 67 74
']' (93) 15 16 17 18 19 20 21 67 74
'{' (123) 38
'}' (125) 38
error (256)
KW_BYTE (258) 7 8 21 75
KW_SHORT (259) 9 15 76
KW_LONG (260) 10 16 77
KW_FLOAT (261) 11 12 17 19 78
KW_DOUBLE (262) 13 14 18 20 79
KW_IF (263) 50 51
KW_THEN (264) 50 51
KW_ELSE (265) 51
KW_WHILE (266) 52
KW_FOR (267)
KW_READ (268) 42
KW_RETURN (269) 49
KW_PRINT (270) 43
OPERATOR_LE (271) 60
OPERATOR_GE (272) 61
OPERATOR_EQ (273) 62
OPERATOR_NE (274) 63
OPERATOR_AND (275) 64
OPERATOR_OR (276) 65
TK_IDENTIFIER (277) 6 26 31 42 66 67 73 74 80
LIT_INTEGER (278) 8 9 10 12 14 15 16 17 18 19 20 21 22 68
LIT_REAL (279) 11 13 24 69
LIT_CHAR (280) 7 70
LIT_STRING (281) 44 46
TOKEN_ERROR (282)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
decList (47)
    on left: 2 3, on right: 1 2
dec (48)
    on left: 4 5, on right: 2
globalVariableDec (49)
    on left: 6, on right: 4
variableInfo (50)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, on right: 6
intList (51)
    on left: 22 23, on right: 15 16 17 18 21 22
realList (52)
    on left: 24 25, on right: 19 20 24
functionDec (53)
    on left: 26, on right: 5
parameterList (54)
    on left: 27 28, on right: 26
moreParameters (55)
    on left: 29 30, on right: 27 29
parameter (56)
    on left: 31, on right: 27 29
comand (57)
    on left: 32 33 34 35 36 37, on right: 38 40 50 51 52
comandBlock (58)
    on left: 38 39, on right: 26 32
moreComands (59)
    on left: 40 41, on right: 38 40
read (60)
    on left: 42, on right: 35
print (61)
    on left: 43, on right: 37
listElem (62)
    on left: 44 45, on right: 43
tail_listElem (63)
    on left: 46 47 48, on right: 44 45 46 47
return (64)
    on left: 49, on right: 36
fluxControl (65)
    on left: 50 51 52, on right: 33
expression (66)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72, on right: 45 47 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 67 72 73 74 81 83
attribution (67)
    on left: 73 74, on right: 34
type (68)
    on left: 75 76 77 78 79, on right: 26 31
callFunc (69)
    on left: 80, on right: 71
listArg (70)
    on left: 81 82, on right: 80
tailArg (71)
    on left: 83 84, on right: 81 83


State 0

    0 $accept: . program $end

    TK_IDENTIFIER  shift, and go to state 1
    '('            shift, and go to state 2

    $default  reduce using rule 3 (decList)

    program            go to state 3
    decList            go to state 4
    dec                go to state 5
    globalVariableDec  go to state 6
    functionDec        go to state 7


State 1

    6 globalVariableDec: TK_IDENTIFIER . ':' variableInfo ';'

    ':'  shift, and go to state 8


State 2

   26 functionDec: '(' . type ')' TK_IDENTIFIER '(' parameterList ')' comandBlock

    KW_BYTE    shift, and go to state 9
    KW_SHORT   shift, and go to state 10
    KW_LONG    shift, and go to state 11
    KW_FLOAT   shift, and go to state 12
    KW_DOUBLE  shift, and go to state 13

    type  go to state 14


State 3

    0 $accept: program . $end

    $end  shift, and go to state 15


State 4

    1 program: decList .

    $default  reduce using rule 1 (program)


State 5

    2 decList: dec . decList

    TK_IDENTIFIER  shift, and go to state 1
    '('            shift, and go to state 2

    $default  reduce using rule 3 (decList)

    decList            go to state 16
    dec                go to state 5
    globalVariableDec  go to state 6
    functionDec        go to state 7


State 6

    4 dec: globalVariableDec .

    $default  reduce using rule 4 (dec)


State 7

    5 dec: functionDec .

    $default  reduce using rule 5 (dec)


State 8

    6 globalVariableDec: TK_IDENTIFIER ':' . variableInfo ';'

    KW_BYTE    shift, and go to state 17
    KW_SHORT   shift, and go to state 18
    KW_LONG    shift, and go to state 19
    KW_FLOAT   shift, and go to state 20
    KW_DOUBLE  shift, and go to state 21

    variableInfo  go to state 22


State 9

   75 type: KW_BYTE .

    $default  reduce using rule 75 (type)


State 10

   76 type: KW_SHORT .

    $default  reduce using rule 76 (type)


State 11

   77 type: KW_LONG .

    $default  reduce using rule 77 (type)


State 12

   78 type: KW_FLOAT .

    $default  reduce using rule 78 (type)


State 13

   79 type: KW_DOUBLE .

    $default  reduce using rule 79 (type)


State 14

   26 functionDec: '(' type . ')' TK_IDENTIFIER '(' parameterList ')' comandBlock

    ')'  shift, and go to state 23


State 15

    0 $accept: program $end .

    $default  accept


State 16

    2 decList: dec decList .

    $default  reduce using rule 2 (decList)


State 17

    7 variableInfo: KW_BYTE . '=' LIT_CHAR
    8             | KW_BYTE . '=' LIT_INTEGER
   21             | KW_BYTE . '[' LIT_INTEGER ']' intList

    '='  shift, and go to state 24
    '['  shift, and go to state 25


State 18

    9 variableInfo: KW_SHORT . '=' LIT_INTEGER
   15             | KW_SHORT . '[' LIT_INTEGER ']' intList

    '='  shift, and go to state 26
    '['  shift, and go to state 27


State 19

   10 variableInfo: KW_LONG . '=' LIT_INTEGER
   16             | KW_LONG . '[' LIT_INTEGER ']' intList

    '='  shift, and go to state 28
    '['  shift, and go to state 29


State 20

   11 variableInfo: KW_FLOAT . '=' LIT_REAL
   12             | KW_FLOAT . '=' LIT_INTEGER
   17             | KW_FLOAT . '[' LIT_INTEGER ']' intList
   19             | KW_FLOAT . '[' LIT_INTEGER ']' realList

    '='  shift, and go to state 30
    '['  shift, and go to state 31


State 21

   13 variableInfo: KW_DOUBLE . '=' LIT_REAL
   14             | KW_DOUBLE . '=' LIT_INTEGER
   18             | KW_DOUBLE . '[' LIT_INTEGER ']' intList
   20             | KW_DOUBLE . '[' LIT_INTEGER ']' realList

    '='  shift, and go to state 32
    '['  shift, and go to state 33


State 22

    6 globalVariableDec: TK_IDENTIFIER ':' variableInfo . ';'

    ';'  shift, and go to state 34


State 23

   26 functionDec: '(' type ')' . TK_IDENTIFIER '(' parameterList ')' comandBlock

    TK_IDENTIFIER  shift, and go to state 35


State 24

    7 variableInfo: KW_BYTE '=' . LIT_CHAR
    8             | KW_BYTE '=' . LIT_INTEGER

    LIT_INTEGER  shift, and go to state 36
    LIT_CHAR     shift, and go to state 37


State 25

   21 variableInfo: KW_BYTE '[' . LIT_INTEGER ']' intList

    LIT_INTEGER  shift, and go to state 38


State 26

    9 variableInfo: KW_SHORT '=' . LIT_INTEGER

    LIT_INTEGER  shift, and go to state 39


State 27

   15 variableInfo: KW_SHORT '[' . LIT_INTEGER ']' intList

    LIT_INTEGER  shift, and go to state 40


State 28

   10 variableInfo: KW_LONG '=' . LIT_INTEGER

    LIT_INTEGER  shift, and go to state 41


State 29

   16 variableInfo: KW_LONG '[' . LIT_INTEGER ']' intList

    LIT_INTEGER  shift, and go to state 42


State 30

   11 variableInfo: KW_FLOAT '=' . LIT_REAL
   12             | KW_FLOAT '=' . LIT_INTEGER

    LIT_INTEGER  shift, and go to state 43
    LIT_REAL     shift, and go to state 44


State 31

   17 variableInfo: KW_FLOAT '[' . LIT_INTEGER ']' intList
   19             | KW_FLOAT '[' . LIT_INTEGER ']' realList

    LIT_INTEGER  shift, and go to state 45


State 32

   13 variableInfo: KW_DOUBLE '=' . LIT_REAL
   14             | KW_DOUBLE '=' . LIT_INTEGER

    LIT_INTEGER  shift, and go to state 46
    LIT_REAL     shift, and go to state 47


State 33

   18 variableInfo: KW_DOUBLE '[' . LIT_INTEGER ']' intList
   20             | KW_DOUBLE '[' . LIT_INTEGER ']' realList

    LIT_INTEGER  shift, and go to state 48


State 34

    6 globalVariableDec: TK_IDENTIFIER ':' variableInfo ';' .

    $default  reduce using rule 6 (globalVariableDec)


State 35

   26 functionDec: '(' type ')' TK_IDENTIFIER . '(' parameterList ')' comandBlock

    '('  shift, and go to state 49


State 36

    8 variableInfo: KW_BYTE '=' LIT_INTEGER .

    $default  reduce using rule 8 (variableInfo)


State 37

    7 variableInfo: KW_BYTE '=' LIT_CHAR .

    $default  reduce using rule 7 (variableInfo)


State 38

   21 variableInfo: KW_BYTE '[' LIT_INTEGER . ']' intList

    ']'  shift, and go to state 50


State 39

    9 variableInfo: KW_SHORT '=' LIT_INTEGER .

    $default  reduce using rule 9 (variableInfo)


State 40

   15 variableInfo: KW_SHORT '[' LIT_INTEGER . ']' intList

    ']'  shift, and go to state 51


State 41

   10 variableInfo: KW_LONG '=' LIT_INTEGER .

    $default  reduce using rule 10 (variableInfo)


State 42

   16 variableInfo: KW_LONG '[' LIT_INTEGER . ']' intList

    ']'  shift, and go to state 52


State 43

   12 variableInfo: KW_FLOAT '=' LIT_INTEGER .

    $default  reduce using rule 12 (variableInfo)


State 44

   11 variableInfo: KW_FLOAT '=' LIT_REAL .

    $default  reduce using rule 11 (variableInfo)


State 45

   17 variableInfo: KW_FLOAT '[' LIT_INTEGER . ']' intList
   19             | KW_FLOAT '[' LIT_INTEGER . ']' realList

    ']'  shift, and go to state 53


State 46

   14 variableInfo: KW_DOUBLE '=' LIT_INTEGER .

    $default  reduce using rule 14 (variableInfo)


State 47

   13 variableInfo: KW_DOUBLE '=' LIT_REAL .

    $default  reduce using rule 13 (variableInfo)


State 48

   18 variableInfo: KW_DOUBLE '[' LIT_INTEGER . ']' intList
   20             | KW_DOUBLE '[' LIT_INTEGER . ']' realList

    ']'  shift, and go to state 54


State 49

   26 functionDec: '(' type ')' TK_IDENTIFIER '(' . parameterList ')' comandBlock

    TK_IDENTIFIER  shift, and go to state 55

    $default  reduce using rule 28 (parameterList)

    parameterList  go to state 56
    parameter      go to state 57


State 50

   21 variableInfo: KW_BYTE '[' LIT_INTEGER ']' . intList

    LIT_INTEGER  shift, and go to state 58

    $default  reduce using rule 23 (intList)

    intList  go to state 59


State 51

   15 variableInfo: KW_SHORT '[' LIT_INTEGER ']' . intList

    LIT_INTEGER  shift, and go to state 58

    $default  reduce using rule 23 (intList)

    intList  go to state 60


State 52

   16 variableInfo: KW_LONG '[' LIT_INTEGER ']' . intList

    LIT_INTEGER  shift, and go to state 58

    $default  reduce using rule 23 (intList)

    intList  go to state 61


State 53

   17 variableInfo: KW_FLOAT '[' LIT_INTEGER ']' . intList
   19             | KW_FLOAT '[' LIT_INTEGER ']' . realList

    LIT_INTEGER  shift, and go to state 58
    LIT_REAL     shift, and go to state 62

    ';'       reduce using rule 23 (intList)
    ';'       [reduce using rule 25 (realList)]
    $default  reduce using rule 23 (intList)

    intList   go to state 63
    realList  go to state 64


State 54

   18 variableInfo: KW_DOUBLE '[' LIT_INTEGER ']' . intList
   20             | KW_DOUBLE '[' LIT_INTEGER ']' . realList

    LIT_INTEGER  shift, and go to state 58
    LIT_REAL     shift, and go to state 62

    ';'       reduce using rule 23 (intList)
    ';'       [reduce using rule 25 (realList)]
    $default  reduce using rule 23 (intList)

    intList   go to state 65
    realList  go to state 66


State 55

   31 parameter: TK_IDENTIFIER . ':' type

    ':'  shift, and go to state 67


State 56

   26 functionDec: '(' type ')' TK_IDENTIFIER '(' parameterList . ')' comandBlock

    ')'  shift, and go to state 68


State 57

   27 parameterList: parameter . moreParameters

    ','  shift, and go to state 69

    $default  reduce using rule 30 (moreParameters)

    moreParameters  go to state 70


State 58

   22 intList: LIT_INTEGER . intList

    LIT_INTEGER  shift, and go to state 58

    $default  reduce using rule 23 (intList)

    intList  go to state 71


State 59

   21 variableInfo: KW_BYTE '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 21 (variableInfo)


State 60

   15 variableInfo: KW_SHORT '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 15 (variableInfo)


State 61

   16 variableInfo: KW_LONG '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 16 (variableInfo)


State 62

   24 realList: LIT_REAL . realList

    LIT_REAL  shift, and go to state 62

    $default  reduce using rule 25 (realList)

    realList  go to state 72


State 63

   17 variableInfo: KW_FLOAT '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 17 (variableInfo)


State 64

   19 variableInfo: KW_FLOAT '[' LIT_INTEGER ']' realList .

    $default  reduce using rule 19 (variableInfo)


State 65

   18 variableInfo: KW_DOUBLE '[' LIT_INTEGER ']' intList .

    $default  reduce using rule 18 (variableInfo)


State 66

   20 variableInfo: KW_DOUBLE '[' LIT_INTEGER ']' realList .

    $default  reduce using rule 20 (variableInfo)


State 67

   31 parameter: TK_IDENTIFIER ':' . type

    KW_BYTE    shift, and go to state 9
    KW_SHORT   shift, and go to state 10
    KW_LONG    shift, and go to state 11
    KW_FLOAT   shift, and go to state 12
    KW_DOUBLE  shift, and go to state 13

    type  go to state 73


State 68

   26 functionDec: '(' type ')' TK_IDENTIFIER '(' parameterList ')' . comandBlock

    '{'  shift, and go to state 74

    $default  reduce using rule 39 (comandBlock)

    comandBlock  go to state 75


State 69

   29 moreParameters: ',' . parameter moreParameters

    TK_IDENTIFIER  shift, and go to state 55

    parameter  go to state 76


State 70

   27 parameterList: parameter moreParameters .

    $default  reduce using rule 27 (parameterList)


State 71

   22 intList: LIT_INTEGER intList .

    $default  reduce using rule 22 (intList)


State 72

   24 realList: LIT_REAL realList .

    $default  reduce using rule 24 (realList)


State 73

   31 parameter: TK_IDENTIFIER ':' type .

    $default  reduce using rule 31 (parameter)


State 74

   38 comandBlock: '{' . comand moreComands '}'

    KW_IF          shift, and go to state 77
    KW_WHILE       shift, and go to state 78
    KW_READ        shift, and go to state 79
    KW_RETURN      shift, and go to state 80
    KW_PRINT       shift, and go to state 81
    TK_IDENTIFIER  shift, and go to state 82
    '{'            shift, and go to state 74

    $default  reduce using rule 39 (comandBlock)

    comand       go to state 83
    comandBlock  go to state 84
    read         go to state 85
    print        go to state 86
    return       go to state 87
    fluxControl  go to state 88
    attribution  go to state 89


State 75

   26 functionDec: '(' type ')' TK_IDENTIFIER '(' parameterList ')' comandBlock .

    $default  reduce using rule 26 (functionDec)


State 76

   29 moreParameters: ',' parameter . moreParameters

    ','  shift, and go to state 69

    $default  reduce using rule 30 (moreParameters)

    moreParameters  go to state 90


State 77

   50 fluxControl: KW_IF . '(' expression ')' KW_THEN comand
   51            | KW_IF . '(' expression ')' KW_THEN comand KW_ELSE comand

    '('  shift, and go to state 91


State 78

   52 fluxControl: KW_WHILE . '(' expression ')' comand

    '('  shift, and go to state 92


State 79

   42 read: KW_READ . '>' TK_IDENTIFIER

    '>'  shift, and go to state 93


State 80

   49 return: KW_RETURN . expression

    TK_IDENTIFIER  shift, and go to state 94
    LIT_INTEGER    shift, and go to state 95
    LIT_REAL       shift, and go to state 96
    LIT_CHAR       shift, and go to state 97
    '!'            shift, and go to state 98
    '('            shift, and go to state 99

    expression  go to state 100
    callFunc    go to state 101


State 81

   43 print: KW_PRINT . listElem

    TK_IDENTIFIER  shift, and go to state 94
    LIT_INTEGER    shift, and go to state 95
    LIT_REAL       shift, and go to state 96
    LIT_CHAR       shift, and go to state 97
    LIT_STRING     shift, and go to state 102
    '!'            shift, and go to state 98
    '('            shift, and go to state 99

    listElem    go to state 103
    expression  go to state 104
    callFunc    go to state 101


State 82

   73 attribution: TK_IDENTIFIER . '=' expression
   74            | TK_IDENTIFIER . '[' expression ']' '=' expression

    '='  shift, and go to state 105
    '['  shift, and go to state 106


State 83

   38 comandBlock: '{' comand . moreComands '}'

    ';'  shift, and go to state 107

    $default  reduce using rule 41 (moreComands)

    moreComands  go to state 108


State 84

   32 comand: comandBlock .

    $default  reduce using rule 32 (comand)


State 85

   35 comand: read .

    $default  reduce using rule 35 (comand)


State 86

   37 comand: print .

    $default  reduce using rule 37 (comand)


State 87

   36 comand: return .

    $default  reduce using rule 36 (comand)


State 88

   33 comand: fluxControl .

    $default  reduce using rule 33 (comand)


State 89

   34 comand: attribution .

    $default  reduce using rule 34 (comand)


State 90

   29 moreParameters: ',' parameter moreParameters .

    $default  reduce using rule 29 (moreParameters)


State 91

   50 fluxControl: KW_IF '(' . expression ')' KW_THEN comand
   51            | KW_IF '(' . expression ')' KW_THEN comand KW_ELSE comand

    TK_IDENTIFIER  shift, and go to state 94
    LIT_INTEGER    shift, and go to state 95
    LIT_REAL       shift, and go to state 96
    LIT_CHAR       shift, and go to state 97
    '!'            shift, and go to state 98
    '('            shift, and go to state 99

    expression  go to state 109
    callFunc    go to state 101


State 92

   52 fluxControl: KW_WHILE '(' . expression ')' comand

    TK_IDENTIFIER  shift, and go to state 94
    LIT_INTEGER    shift, and go to state 95
    LIT_REAL       shift, and go to state 96
    LIT_CHAR       shift, and go to state 97
    '!'            shift, and go to state 98
    '('            shift, and go to state 99

    expression  go to state 110
    callFunc    go to state 101


State 93

   42 read: KW_READ '>' . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 111


State 94

   66 expression: TK_IDENTIFIER .
   67           | TK_IDENTIFIER . '[' expression ']'
   80 callFunc: TK_IDENTIFIER . '(' listArg ')'

    '['  shift, and go to state 112
    '('  shift, and go to state 113

    $default  reduce using rule 66 (expression)


State 95

   68 expression: LIT_INTEGER .

    $default  reduce using rule 68 (expression)


State 96

   69 expression: LIT_REAL .

    $default  reduce using rule 69 (expression)


State 97

   70 expression: LIT_CHAR .

    $default  reduce using rule 70 (expression)


State 98

   72 expression: '!' . expression

    TK_IDENTIFIER  shift, and go to state 94
    LIT_INTEGER    shift, and go to state 95
    LIT_REAL       shift, and go to state 96
    LIT_CHAR       shift, and go to state 97
    '!'            shift, and go to state 98
    '('            shift, and go to state 99

    expression  go to state 114
    callFunc    go to state 101


State 99

   53 expression: '(' . expression ')'

    TK_IDENTIFIER  shift, and go to state 94
    LIT_INTEGER    shift, and go to state 95
    LIT_REAL       shift, and go to state 96
    LIT_CHAR       shift, and go to state 97
    '!'            shift, and go to state 98
    '('            shift, and go to state 99

    expression  go to state 115
    callFunc    go to state 101


State 100
